prevent flash of light mode on dark mode refresh

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@
   .dark .root-background {
     background-image: url("/background-dark.png");
   }
+
+  .no-transition * {
+    transition: none !important;
+  }
 }
 
 .footer {
